# scholar-loop

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
engines/: __init__.py
engines/cheater/: __init__.py  prepare.py  train.py
engines/torch_vision/: __init__.py  prepare.py  train.py
engines/vision/: __init__.py  prepare.py  train.py
examples/: campaign_demo.py  e2e_live.py  governed_campaign.py  quickstart.py  run_to_paper.py
examples/sample_run/: README.md  experiments.jsonl  paper.md  run.md
examples/sample_run_diabetes/: README.md  experiments.jsonl  paper.md  run.md
profiles/: cheater.yaml  diabetes-mlp.yaml  digits-mlp.yaml  image-classification.yaml  profile.schema.yaml
scholarloop/: __init__.py  advisor.py  agent.py  debate.py  director.py  governor.py  ledger.py  litscout.py  llm.py  orchestrator.py  paper.py  profile.py  reasoner.py  reasoning.py  reflector.py  registry.py  runner.py  skills.py
tests/: test_advisor_director.py  test_agent.py  test_contracts.py  test_debate.py  test_edit_channel.py  test_frozen_scoring.py  test_governor.py  test_litscout.py  test_llm.py  test_orchestrator.py  test_paper.py  test_reasoning.py  test_reflector.py  test_runner.py  test_skills.py  test_torch_engine.py
