[project]
name = "scholarloop"
version = "0.0.1"
description = "An auto-research framework that replicates a PhD's experiment workflow on a small-GPU budget."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
llm = ["anthropic>=0.92"]   # only needed for real runs (AnthropicLLM); tests use MockLLM

[tool.setuptools.packages.find]
include = ["scholarloop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
